<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PickleData</string>
    <string name="action_settings">Settings</string>
    <string name="clock_value">12:00:00</string>
    <string name="clock_label">Time</string>
    <string name="speed_display">-000-</string>
    <string name="speed_label">Speed</string>
    <string name="maxSpeedValue">-999-</string>
    <string name="maxspeedlabel">MaxSpeed</string>

    <string name="left_height_value">-lh-</string>
    <string name="left_height_label">LeftHeight</string>
    <string name="right_height_value">-rh-</string>
    <string name="right_height_label">RightHeight</string>

    <string name="button_label">Calibrate</string>
    <string name="CalibrateName">Calibrate</string>
    <string name="calibrate_max_label">Calibrate Max Extension</string>
    <string name="calibrate_normal_label">Calibrate Normal Extension</string>
    <string name="cal_norm_con_label">Cal. Norm</string>
    <string name="cal_max_con_label">Cal. Max</string>

    <string name="frontRPMvalue">-fX-</string>
    <string name="front_rpm_label">FrontRPM</string>
    <string name="rearRPMvalue">-rX-</string>
    <string name="rear_rpm_label">RearRPM</string>
    <string name="deltaRPMvalue">-dX-</string>
    <string name="delta_rpm_label">DeltaRPM</string>

    <string name="lat_value">99.999999</string>
    <string name="lat_label">Latitude</string>
    <string name="long_value">999.999999</string>
    <string name="long_label">Longitude</string>
    <string name="bar_label">========================</string>

</resources>
